aced application pages and faq page

--- a/dashboard/aced-escrow.html
+++ b/dashboard/aced-escrow.html
@@ -12,6 +12,7 @@
     <link rel="icon" href="../favicon.png" type="image/x-icon">
     <!-- Custom CSS -->
     <link href="plugins/assets/css/default.css" rel="stylesheet" type="text/css">
+    <link href="plugins/assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <!-- Preloader -->
@@ -575,15 +576,31 @@
                 <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
                     <ol class="breadcrumb">
                         <li><a href="index.html">Dashboard</a></li>
-                        <li><a href="#"><span>Other Pages</span></a></li>
-                        <li class="active"><span>AceD Escrow</span></li>
+                        <li><a href="#">Other Pages</a></li>
+                        <li class="active">AceD Escrow</li>
                     </ol>
                 </div>
                 <!-- /Breadcrumb -->
             </div>
             <!-- /Title -->
             <!-- Row -->
-
+            <div class="row" style="padding: 3% 0;">
+                <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
+                    <div class="img-responsive">
+                        <img src="../slider_5.jpg" class="img-responsive">
+                    </div>
+                    <div class="co_acedpage">
+                        <h1 class="">AceD Escrow</h1>
+                        <h6>The cryptocurrency world can be harsh to a naive investor.</h6>
+                        <h6>Scammers are always one step ahead of common folks. </h6>
+                        <h6>ACED Escrow is an invaluable service for both buyers and sellers of Crypto-Assets.</h6>
+                        <h6>ACED Escrow works by holding funds until the agreed upon good is exchanged or service is rendered.</h6>
+                        <br>
+                        <h6>This means an investor will be able to purchase an ACED Masternode directly through the service app.</h6>
+                        <h6>Eventually the Escrow service will even be able to serve as a platform to host ICO's.</h6>
+                    </div>
+                </div>
+            </div>
             <!-- Row -->
         </div>
         <!-- Footer -->
