--- a/dashboard/aced-gaming.html
+++ b/dashboard/aced-gaming.html
@@ -12,6 +12,7 @@
 <link rel="icon" href="../favicon.png" type="image/x-icon">
 <!-- Custom CSS -->
 <link href="plugins/assets/css/default.css" rel="stylesheet" type="text/css">
+<link href="plugins/assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <!-- Preloader -->
@@ -576,15 +577,30 @@
         <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
           <ol class="breadcrumb">
             <li><a href="index.html">Dashboard</a></li>
-            <li><a href="#"><span>Other Pages</span></a></li>
-            <li class="active"><span>Aced-Gaming</span></li>
+            <li><a href="#">Other Pages</a></li>
+            <li class="active">Aced-Gaming</li>
           </ol>
         </div>
         <!-- /Breadcrumb --> 
       </div>
       <!-- /Title --> 
       <!-- Row -->
-
+      <div class="row" style="padding: 3% 0;">
+        <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
+          <div class="img-responsive">
+            <img src="../slider_2.jpg" class="img-responsive">
+          </div>
+          <div class="co_acedpage">
+            <h1 class="">AceD Gaming</h1>
+            <h6>The online gaming industry is expected to reach a market size of over 50 Billion US Dollars in 2018.</h6>
+            <h6>ACED is trying to capitalize on this opportunity with the release of ACED GAMING - an online platform that will allow GAMERS to play against each other in skill-based games while wagering on the outcome.</h6>
+            <h6>If you are a gaming developer, you can add your games to the platform and earn some ACED by taking a small fee for each transaction.</h6>
+            <br>
+            <h6>For developers, it's not just earning money on their games rather developing a brand of their own. </h6>
+            <h6>ACED gaming gives you the opportunity to get noticed in a grandeur way.</h6>
+          </div>
+        </div>
+      </div>
       <!-- Row --> 
     </div>
     <!-- Footer -->
