--- a/dashboard/aced-streaming.html
+++ b/dashboard/aced-streaming.html
@@ -12,6 +12,7 @@
     <link rel="icon" href="../favicon.png" type="image/x-icon">
     <!-- Custom CSS -->
     <link href="plugins/assets/css/default.css" rel="stylesheet" type="text/css">
+    <link href="plugins/assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <!-- Preloader -->
@@ -576,15 +577,32 @@
                 <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
                     <ol class="breadcrumb">
                         <li><a href="index.html">Dashboard</a></li>
-                        <li><a href="#"><span>Other Pages</span></a></li>
-                        <li class="active"><span>Aced-Streaming</span></li>
+                        <li><a href="#">Other Pages</a></li>
+                        <li class="active">Aced-Streaming</li>
                     </ol>
                 </div>
                 <!-- /Breadcrumb -->
             </div>
             <!-- /Title -->
             <!-- Row -->
-
+            <div class="row" style="padding: 3% 0;">
+                <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
+                    <div class="img-responsive">
+                        <img src="../slider_3.jpg" class="img-responsive">
+                    </div>
+                    <div class="co_acedpage">
+                        <h1 class="">AceD Streaming</h1>
+                        <h6>Video game streaming has become a massive industry.</h6>
+                        <h6>Some popular streamers have become celebrities through what started as a hobby.</h6>
+                        <h6>The largest game streaming service, Twitch, was recently bought by Amazon for nearly $1 Billion.</h6>
+                        <h6> ACED streaming is a streaming platform that will allow streamers to be rewarded for the quality of content that they deliver.</h6>
+                        <h6>The audience can choose to use ACED coins to tip the streamer as they deem fit. </h6>
+                        <h6>This creates an interactive social experience and gives immediate tangible rewards to the content providers.</h6>
+                        <br>
+                        <h6>The next big celebrity streamer could be you.!</h6>
+                    </div>
+                </div>
+            </div>
             <!-- Row -->
         </div>
         <!-- Footer -->
