--- a/dashboard/faq.html
+++ b/dashboard/faq.html
@@ -12,6 +12,7 @@
 <link rel="icon" href="../favicon.png" type="image/x-icon">
 <!-- Custom CSS -->
 <link href="plugins/assets/css/default.css" rel="stylesheet" type="text/css">
+<link href="plugins/assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <!-- Preloader -->
@@ -29,7 +30,7 @@
   </div>
 </div>
 <!-- //Preloader -->
-<div class="wrapper light-theme"> 
+<div class="wrapper light-theme dark-template">
   <!-- Top Header -->
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="mobile-only-brand pull-left">
@@ -576,42 +577,47 @@
         <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
           <ol class="breadcrumb">
             <li><a href="index.html">Dashboard</a></li>
-            <li><a href="#"><span>Other Pages</span></a></li>
-            <li class="active"><span>Faq</span></li>
+            <li><a href="#">Other Pages</a></li>
+            <li class="active">Faq</li>
           </ol>
         </div>
         <!-- /Breadcrumb --> 
       </div>
       <!-- /Title --> 
       <!-- Row -->
-      <div class="row">
-        <div class="col-xs-12">
+      <div class="row co_faq">
+        <div class="col-xs-10 col-xs-offset-1">
           <div class="panel panel-default card-view">
             <div class="panel-wrapper collapse in">
+              <div class="panel-heading">
+                <h2>General</h2>
+              </div>
               <div class="panel-body">
                 <div class="panel-group accordion-struct" id="accordion_1" role="tablist" aria-multiselectable="true">
                   <div class="panel panel-default">
-                    <div class="panel-heading activestate" role="tab" id="heading_1"> <a role="button" data-toggle="collapse" data-parent="#accordion_1" href="#collapse_1" aria-expanded="true">How can i purchase this admin ?</a> </div>
+                    <div class="panel-heading activestate" role="tab" id="heading_1">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion_1" href="#collapse_1" aria-expanded="true">What is AceD?</a>
+                    </div>
                     <div id="collapse_1" class="panel-collapse collapse in" role="tabpanel">
-                      <div class="panel-body pa-15">Enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</div>
+                      <div class="panel-body pa-15">AceD is a new decentralized cryptocurrency designed to achieve the goal of being a truly anonymous exchange platform. AceD’s community-centric values will help to secure widespread adoption.</div>
                     </div>
                   </div>
                   <div class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="heading_2"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion_1" href="#collapse_2" aria-expanded="false">How to modify Navigation? </a> </div>
+                    <div class="panel-heading" role="tab" id="heading_2"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion_1" href="#collapse_2" aria-expanded="false">What makes AceD different?</a> </div>
                     <div id="collapse_2" class="panel-collapse collapse" role="tabpanel">
-                      <div class="panel-body pa-15">Enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</div>
+                      <div class="panel-body pa-15">A large and tightly-knit team implement evolutionary changes to the network's infrastructure based upon the community's governance proposals. These proposals may include a change to fund allocation, marketing strategy, or to create a charitable event.</div>
                     </div>
                   </div>
                   <div class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="heading_3"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion_1" href="#collapse_3" aria-expanded="false" >How to get yearly Support?</a> </div>
+                    <div class="panel-heading" role="tab" id="heading_3"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion_1" href="#collapse_3" aria-expanded="false" >Why should I choose AceD over a different privacy-focused currency?</a> </div>
                     <div id="collapse_3" class="panel-collapse collapse" role="tabpanel">
-                      <div class="panel-body pa-15">Es ist ein lang erwiesener Fakt, dass ein Leser vom Text abgelenkt wird, wenn er sich ein Layout ansieht. Der Punkt, Lorem Ipsum zu nutzen, ist.</div>
+                      <div class="panel-body pa-15">The AceD team has received resounding interest from large international financial corporation. This prepaid card is available in 46 countries worldwide and will help make anonymous and safe cryptocurrency available to a massive audience through a proposed direct exchange with AceD. This will pave the way for AceD to work with millions of merchants. The implementation of Masternodes ensures all transactions are quick and completely private.</div>
                     </div>
                   </div>
                   <div class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="heading_4"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion_1" href="#collapse_4" aria-expanded="false"> collapse four</a> </div>
+                    <div class="panel-heading" role="tab" id="heading_4"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion_1" href="#collapse_4" aria-expanded="false"> Where can I get more information about AceD?</a> </div>
                     <div id="collapse_4" class="panel-collapse collapse" role="tabpanel">
-                      <div class="panel-body pa-15">Es ist ein lang erwiesener Fakt, dass ein Leser vom Text abgelenkt wird, wenn er sich ein Layout ansieht. Der Punkt, Lorem Ipsum zu nutzen, ist.</div>
+                      <div class="panel-body pa-15">We have a rapidly growing community in our Discord channel where team members and our community are always accessible. To keep up with AceD news, follow @AcedCoin. Or you can check out our official Website.</div>
                     </div>
                   </div>
                 </div>
@@ -622,34 +628,38 @@
       </div>
       <!-- Row --> 
       <!-- Row -->
-      <div class="row">
-        <div class="col-xs-12">
+      <div class="row co_faq">
+        <div class="col-xs-10 col-xs-offset-1">
           <div class="panel panel-default card-view">
             <div class="panel-wrapper collapse in">
+              <div class="panel-heading">
+                <h2>Mining and Masternodes</h2>
+              </div>
               <div class="panel-body">
                 <div class="panel-group accordion-struct" id="accordion_2" role="tablist" aria-multiselectable="true">
                   <div class="panel panel-default">
-                    <div class="panel-heading activestate" role="tab" id="heading_1_1"> <a role="button" data-toggle="collapse" data-parent="#accordion_2" href="#collapse_1_1" aria-expanded="true">How can i purchase this admin ?</a> </div>
-                    <div id="collapse_1_1" class="panel-collapse collapse" role="tabpanel">
-                      <div class="panel-body pa-15">Enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</div>
+                    <div class="panel-heading" role="tab" id="heading_21"><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion_2" href="#collapse_21" aria-expanded="false">Can I mine AceD?</a>
+                    </div>
+                    <div id="collapse_21" class="panel-collapse collapse in" role="tabpanel">
+                      <div class="panel-body pa-15">Yes! AceD (ACED) is categorized as Proof-of-Work + Masternode. The mining algorithm is X11. Target block time is 120 seconds with a 4 AceD reward for miners (16 AceDreward for Masternodes). There is a 6% premine used to fund pre sale. Max supply will be 25,000,000 AceD.</div>
                     </div>
                   </div>
                   <div class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="heading_2_1"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion_12" href="#collapse_2_1" aria-expanded="false">How to modify Navigation? </a> </div>
-                    <div id="collapse_2_1" class="panel-collapse collapse" role="tabpanel">
-                      <div class="panel-body pa-15">Enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</div>
+                    <div class="panel-heading" role="tab" id="heading_22"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion_2" href="#collapse_22" aria-expanded="false">What are Masternodes?</a> </div>
+                    <div id="collapse_22" class="panel-collapse collapse" role="tabpanel">
+                      <div class="panel-body pa-15">Simply put, a Masternode is a wallet with 1000 AceD locked in as collateral. The wallets are usually run on cloud-based servers to ensure that they have minimal downtime. The Masternode assists with keeping the network secure, fast, and anonymous.</div>
                     </div>
                   </div>
                   <div class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="heading_3_1"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion_2" href="#collapse_3_1" aria-expanded="false" >How to get yearly Support?</a> </div>
-                    <div id="collapse_3_1" class="panel-collapse collapse" role="tabpanel">
-                      <div class="panel-body pa-15">Es ist ein lang erwiesener Fakt, dass ein Leser vom Text abgelenkt wird, wenn er sich ein Layout ansieht. Der Punkt, Lorem Ipsum zu nutzen, ist.</div>
+                    <div class="panel-heading" role="tab" id="heading_23"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion_2" href="#collapse_23" aria-expanded="false" >Why would I want a Masternode?</a> </div>
+                    <div id="collapse_23" class="panel-collapse collapse" role="tabpanel">
+                      <div class="panel-body pa-15">Just as miners are rewarded, so are masternode owners. With each block, Masternode owners receive a share of the 16 AceD reward (miners receive 4 AceD).</div>
                     </div>
                   </div>
                   <div class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="heading_4_1"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion_2" href="#collapse_4_1" aria-expanded="false"> collapse four</a> </div>
-                    <div id="collapse_4_1" class="panel-collapse collapse" role="tabpanel">
-                      <div class="panel-body pa-15">Es ist ein lang erwiesener Fakt, dass ein Leser vom Text abgelenkt wird, wenn er sich ein Layout ansieht. Der Punkt, Lorem Ipsum zu nutzen, ist.</div>
+                    <div class="panel-heading" role="tab" id="heading_24"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion_2" href="#collapse_24" aria-expanded="false">How do I get a Masternode?</a> </div>
+                    <div id="collapse_24" class="panel-collapse collapse" role="tabpanel">
+                      <div class="panel-body pa-15">The first step is to obtain 1000 AceD by mining or through an exchange platform. There will be guides posted with instructions on the technical aspect of Masternode setup and maintenance. There are always team and community members ready to help in our Discord as well.</div>
                     </div>
                   </div>
                 </div>
@@ -658,7 +668,45 @@
           </div>
         </div>
       </div>
-      <!-- Row --> 
+      <!-- Row -->
+      <!-- Row -->
+      <div class="row co_faq">
+        <div class="col-xs-10 col-xs-offset-1">
+          <div class="panel panel-default card-view">
+            <div class="panel-wrapper collapse in">
+              <div class="panel-heading">
+                <h2>Future</h2>
+              </div>
+              <div class="panel-body">
+                <div class="panel-group accordion-struct" id="accordion_3" role="tablist" aria-multiselectable="true">
+                  <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="heading_31"><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion_3" href="#collapse_31" aria-expanded="false">How does the AceD team plan to stay ahead in the cryptocurrency world?</a>
+                    </div>
+                    <div id="collapse_31" class="panel-collapse collapse in" role="tabpanel">
+                      <div class="panel-body pa-15">The AceD team’s priority is to allow the community to decide the direction of the project. As a community driven coin, you are our most valuable resource. By giving our community a voice and having a team capable of fulfilling that vision, AceD will become a key player in the cryptocurrency world.</div>
+                    </div>
+                  </div>
+                  <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="heading_32"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion_3" href="#collapse_32" aria-expanded="false">What is coming up for AceD?</a> </div>
+                    <div id="collapse_32" class="panel-collapse collapse" role="tabpanel">
+                      <div class="panel-body pa-15">The AceD team has a very solid roadmap with a focus on expanding merchant and community support. The first order of business is get AceD listed on exchange sites such as Crypto-Bridge to encourage trade and allow interested users to fund their Masternodes. An aggressive marketing campaign will include events and meetups to introduce more potential investors. AceD Masternode Dashboard will give users detailed and personalized statistics on their Masternodes.<br>
+                        Marketing will be ramped up to include sponsored events. Our demographic will be further broadened with the introduction of AceD Gaming which will allow P2P micro-wagering. Escrow service will further facilitate safe trading.<br>
+                        To make these changes happen, AceD will continue to expand its team throughout the whole process.</div>
+                    </div>
+                  </div>
+                  <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="heading_33"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion_3" href="#collapse_33" aria-expanded="false" >Can I help AceD more directly?</a> </div>
+                    <div id="collapse_33" class="panel-collapse collapse" role="tabpanel">
+                      <div class="panel-body pa-15">Yes! Our team is always looking for new talent. If you have a passion for innovation and are interested in joining the AceD team, please send an email to info@acedcoin.com and let us know why you are the best candidate for the position.</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Row -->
     </div>
     <!-- Footer -->
     <footer class="footer container-fluid pt-10 pb-10  pl-30 pr-30">
