--- a/dashboard/aced-foundation.html
+++ b/dashboard/aced-foundation.html
@@ -12,6 +12,7 @@
     <link rel="icon" href="../favicon.png" type="image/x-icon">
     <!-- Custom CSS -->
     <link href="plugins/assets/css/default.css" rel="stylesheet" type="text/css">
+    <link href="plugins/assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <!-- Preloader -->
@@ -577,15 +578,33 @@
                 <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
                     <ol class="breadcrumb">
                         <li><a href="index.html">Dashboard</a></li>
-                        <li><a href="#"><span>Other Pages</span></a></li>
-                        <li class="active"><span>AceD Foundation</span></li>
+                        <li><a href="#">Other Pages</a></li>
+                        <li class="active">AceD Foundation</li>
                     </ol>
                 </div>
                 <!-- /Breadcrumb -->
             </div>
             <!-- /Title -->
             <!-- Row -->
-
+            <div class="row" style="padding: 3% 0;">
+                <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
+                    <div class="img-responsive">
+                        <img src="../slider6.png" style="width:100%;" class="img-responsive">
+                    </div>
+                    <div class="co_acedpage">
+                        <h1 class="">AceD Foundation</h1>
+                        <h6>E-commerce is no longer just a matter between corporations and customers.</h6>
+                        <h6>Crowd-funding has become a popular method for groups to raise capital for charitable donation campaigns.</h6>
+                        <h6>The AceD team strives to constantly evolve to serve the needs of financial technology as well as community welfare sectors.</h6>
+                        <br>
+                        <h6>Therefore, we are excited to announce the fifth application of the AceD platform, AceD Foundation!</h6>
+                        <br>
+                        <h6>AceD Foundation is a dynamic tool that will allow transparent funding using AceD currency to charitable organizations and groups in need.</h6>
+                        <h6>Robust anonymity features and decentralized governance of AceD make it the perfect vehicle for aid to groups in immediate need of monetary assistance; including groups in oppressed or war-torn locales.</h6>
+                        <h6>Community involvement is a primary focus for the AceD organization and AceD Foundation will help share this ideal for people who need it most.</h6>
+                    </div>
+                </div>
+            </div>
             <!-- Row -->
         </div>
         <!-- Footer -->
