--- a/dashboard/aced-snap.html
+++ b/dashboard/aced-snap.html
@@ -12,6 +12,7 @@
     <link rel="icon" href="../favicon.png" type="image/x-icon">
     <!-- Custom CSS -->
     <link href="plugins/assets/css/default.css" rel="stylesheet" type="text/css">
+    <link href="plugins/assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <!-- Preloader -->
@@ -576,15 +577,30 @@
                 <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
                     <ol class="breadcrumb">
                         <li><a href="index.html">Dashboard</a></li>
-                        <li><a href="#"><span>Other Pages</span></a></li>
-                        <li class="active"><span>AceD Snap</span></li>
+                        <li><a href="#">Other Pages</a></li>
+                        <li class="active">AceD Snap</li>
                     </ol>
                 </div>
                 <!-- /Breadcrumb -->
             </div>
             <!-- /Title -->
             <!-- Row -->
-
+            <div class="row" style="padding: 3% 0;">
+                <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
+                    <div class="img-responsive">
+                        <img src="../slider_4.jpg" class="img-responsive">
+                    </div>
+                    <div class="co_acedpage">
+                        <h1 class="">AceD Snap</h1>
+                        <h6>ACED plans for a platform that aims to bring the world together by allowing people to see through the eyes of photographers sharing photos through the ACED platform.</h6>
+                        <br>
+                        <h6>Photographers can now earn royalties through selling their photographs and by receiving tips from viewers/users.</h6>
+                        <h6>Unlike other platforms, ACED bring the ethics of decentralization allowing everyone and anyone to join and share with the world what inspires them with the opportunity to earn royalties for their work.</h6>
+                        <br>
+                        <h6>Say GoodBye to all those centralized unpaid mediums and add yourself another income stream.</h6>
+                    </div>
+                </div>
+            </div>
             <!-- Row -->
         </div>
         <!-- Footer -->
