remove store banner

--- a/dashboard/ecommerce-products-details.html
+++ b/dashboard/ecommerce-products-details.html
@@ -611,17 +611,17 @@
                       <td ><span class="label label-success">In Stock</span></td>
                       <td class="text-center"><a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Edit"><i class="mdi mdi-lead-pencil font-18 txt-primary"></i></a> &nbsp; <a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-close txt-danger font-18"></i></a></td>
                     </tr>
-                    <tr>
-                      <td>#2</td>
-                      <td class="vertical-align-middle"><div class="pull-left"><img src="http://via.placeholder.com/36x36" alt="" title=""></div>
-                        <div class="pull-left pa-10">Banners</div></td>
-                      <td>design</td>
-                      <td>Aced2</td>
-                      <td>500-3000 AceD</td>
-                      <td>10000000</td>
-                      <td><span class="label label-success">In Stock</span></td>
-                      <td class="text-center"><a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Edit"><i class="mdi mdi-lead-pencil font-18 txt-primary"></i></a> &nbsp; <a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-close txt-danger font-18"></i></a></td>
-                    </tr>
+                    <!--<tr>-->
+                      <!--<td>#2</td>-->
+                      <!--<td class="vertical-align-middle"><div class="pull-left"><img src="http://via.placeholder.com/36x36" alt="" title=""></div>-->
+                        <!--<div class="pull-left pa-10">Banners</div></td>-->
+                      <!--<td>design</td>-->
+                      <!--<td>Aced2</td>-->
+                      <!--<td>500-3000 AceD</td>-->
+                      <!--<td>10000000</td>-->
+                      <!--<td><span class="label label-success">In Stock</span></td>-->
+                      <!--<td class="text-center"><a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Edit"><i class="mdi mdi-lead-pencil font-18 txt-primary"></i></a> &nbsp; <a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-close txt-danger font-18"></i></a></td>-->
+                    <!--</tr>-->
                   </tbody>
                   <tfoot>
                   </tfoot>
