--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -723,8 +723,8 @@
                     <li><i class="mdi mdi-bitcoin text-warning"></i> BTC <span class="coin-value"> $6,095.46</span></li>
                     <li><i><img src="plugins/assets/img/dash.png" style="width:14px;margin-bottom: -3px;"></i> DASH <span class="coin-value"> $228.7990</span></li>
                     <li><i class="mdi mdi-currency-eth text-primary"></i> ETH <span class="coin-value"> $427.58</span></li>
-                    <li><i class="mdi mdi-currency-gbp text-default"></i> GBP <span class="coin-value"> $1.315461</span></li>
-                    <li><i class="mdi mdi-currency-eur text-danger"></i> EUR <span class="coin-value"> $1.1561556</span></li>
+                    <!--<li><i class="mdi mdi-currency-gbp text-default"></i> GBP <span class="coin-value"> $1.315461</span></li>-->
+                    <!--<li><i class="mdi mdi-currency-eur text-danger"></i> EUR <span class="coin-value"> $1.1561556</span></li>-->
                   </ul>
                 </div>
               </div>
