--- a/dashboard/aced-foundation.html
+++ b/dashboard/aced-foundation.html
@@ -586,24 +586,100 @@
             </div>
             <!-- /Title -->
             <!-- Row -->
-            <div class="row" style="padding: 3% 0;">
+            <div class="row" style="">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
-                    <div class="img-responsive">
-                        <img src="../slider6.png" style="width:100%;" class="img-responsive">
-                    </div>
-                    <div class="co_acedpage">
-                        <h1 class="">AceD Foundation</h1>
-                        <h6>E-commerce is no longer just a matter between corporations and customers.</h6>
-                        <h6>Crowd-funding has become a popular method for groups to raise capital for charitable donation campaigns.</h6>
-                        <h6>The AceD team strives to constantly evolve to serve the needs of financial technology as well as community welfare sectors.</h6>
-                        <br>
-                        <h6>Therefore, we are excited to announce the fifth application of the AceD platform, AceD Foundation!</h6>
-                        <br>
-                        <h6>AceD Foundation is a dynamic tool that will allow transparent funding using AceD currency to charitable organizations and groups in need.</h6>
-                        <h6>Robust anonymity features and decentralized governance of AceD make it the perfect vehicle for aid to groups in immediate need of monetary assistance; including groups in oppressed or war-torn locales.</h6>
-                        <h6>Community involvement is a primary focus for the AceD organization and AceD Foundation will help share this ideal for people who need it most.</h6>
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                        <!-- Indicators -->
+                        <!--<ol class="carousel-indicators">-->
+                            <!--<li data-target="#myCarousel" data-slide-to="0" class="active"></li>-->
+                            <!--<li data-target="#myCarousel" data-slide-to="1"></li>-->
+                            <!--<li data-target="#myCarousel" data-slide-to="2"></li>-->
+                            <!--<li data-target="#myCarousel" data-slide-to="3"></li>-->
+                            <!--<li data-target="#myCarousel" data-slide-to="4"></li>-->
+                        <!--</ol>-->
+
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <img src="../slider_2.jpg" alt="" style="width:100%;">
+                                <div class="co_acedpage">
+                                    <h1 class="">AceD Gaming</h1>
+                                    <p>The online gaming industry is expected to reach a market size of over 50 Billion US Dollars in 2018.</p>
+                                    <p>ACED is trying to capitalize on this opportunity with the release of ACED GAMING - an online platform that will allow GAMERS to play against each other in skill-based games while wagering on the outcome.</p>
+                                    <p>If you are a gaming developer, you can add your games to the platform and earn some ACED by taking a small fee for each transaction.</p>
+                                    <br>
+                                    <p>For developers, it's not just earning money on their games rather developing a brand of their own. </p>
+                                    <p>ACED gaming gives you the opportunity to get noticed in a grandeur way.</p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="../slider_3.jpg" alt="" style="width:100%;">
+                                <div class="co_acedpage">
+                                    <h1 class="">AceD Streaming</h1>
+                                    <p>Video game streaming has become a massive industry.</p>
+                                    <p>Some popular streamers have become celebrities through what started as a hobby.</p>
+                                    <p>The largest game streaming service, Twitch, was recently bought by Amazon for nearly $1 Billion.</p>
+                                    <p> ACED streaming is a streaming platform that will allow streamers to be rewarded for the quality of content that they deliver.</p>
+                                    <p>The audience can choose to use ACED coins to tip the streamer as they deem fit. </p>
+                                    <p>This creates an interactive social experience and gives immediate tangible rewards to the content providers.</p>
+                                    <br>
+                                    <p>The next big celebrity streamer could be you.!</p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="../slider_4.jpg" alt="" style="width:100%;">
+                                <div class="co_acedpage">
+                                    <h1 class="">AceD Snap</h1>
+                                    <p>ACED plans for a platform that aims to bring the world together by allowing people to see through the eyes of photographers sharing photos through the ACED platform.</p>
+                                    <br>
+                                    <p>Photographers can now earn royalties through selling their photographs and by receiving tips from viewers/users.</p>
+                                    <p>Unlike other platforms, ACED bring the ethics of decentralization allowing everyone and anyone to join and share with the world what inspires them with the opportunity to earn royalties for their work.</p>
+                                    <br>
+                                    <p>Say GoodBye to all those centralized unpaid mediums and add yourself another income stream.</p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="../slider6.png" alt="" style="width:100%;">
+                                <div class="co_acedpage">
+                                    <h1 class="">AceD Foundation</h1>
+                                    <p>E-commerce is no longer just a matter between corporations and customers.</p>
+                                    <p>Crowd-funding has become a popular method for groups to raise capital for charitable donation campaigns.</p>
+                                    <p>The AceD team strives to constantly evolve to serve the needs of financial technology as well as community welfare sectors.</p>
+                                    <br>
+                                    <p>Therefore, we are excited to announce the fifth application of the AceD platform, AceD Foundation!</p>
+                                    <br>
+                                    <p>AceD Foundation is a dynamic tool that will allow transparent funding using AceD currency to charitable organizations and groups in need.</p>
+                                    <p>Robust anonymity features and decentralized governance of AceD make it the perfect vehicle for aid to groups in immediate need of monetary assistance; including groups in oppressed or war-torn locales.</p>
+                                    <p>Community involvement is a primary focus for the AceD organization and AceD Foundation will help share this ideal for people who need it most.</p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="../slider_5.jpg" alt="" style="width:100%;">
+                                <div class="co_acedpage">
+                                    <h1 class="">AceD Escrow</h1>
+                                    <p>The cryptocurrency world can be harsh to a naive investor.</p>
+                                    <p>Scammers are always one step ahead of common folks. </p>
+                                    <p>ACED Escrow is an invaluable service for both buyers and sellers of Crypto-Assets.</p>
+                                    <p>ACED Escrow works by holding funds until the agreed upon good is exchanged or service is rendered.</p>
+                                    <br>
+                                    <p>This means an investor will be able to purchase an ACED Masternode directly through the service app.</p>
+                                    <p>Eventually the Escrow service will even be able to serve as a platform to host ICO's.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Left and right controls -->
+                        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
                 </div>
+
             </div>
             <!-- Row -->
         </div>
