--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1036,14 +1036,15 @@
 <script src="plugins/vendors/bower_components/peity/jquery.peity.min.js"></script> 
 <script src="plugins/assets/js/peity-data.js"></script> 
 <!-- Init JavaScript --> 
-<script src="plugins/assets/js/init.js"></script> 
-<script src="plugins/assets/js/random-class.js"></script> 
-<!-- Form Advance Init JavaScript --> 
+<script src="plugins/assets/js/init.js"></script>
+<!--<script src="plugins/assets/js/random-class.js"></script>
+<!-- Form Advance Init JavaScript -->
+<!--
 <script src="plugins/assets/js/form-advance-data.js"></script> 
 <script src="plugins/assets/js/stock-chart.init.js"></script> 
 <script src="plugins/assets/js/bitcoin-init.js"></script> 
 <script src="plugins/assets/js/dashboard-dark.init.js"></script>
-
+-->
 
 
 
