--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -736,7 +736,7 @@
       <!--table-->
       <div class="row">
         <div class="col-xs-12">
-          <div class="panel panel-default card-view panel-refresh">
+          <div id="cointable" class="panel panel-default card-view panel-refresh">
             <div class="refresh-container">
               <div class="preloader">
                 <div class="circles-1">
@@ -923,7 +923,7 @@
                       <td>15,000	</td>
                       <td>$7,717</td>
                     </tr>-->
-                    </tbody>
+                    <!--</tbody>
                     <tfoot>
                     <tr>
                       <th></th>
@@ -940,7 +940,7 @@
                     </tfoot>
                   </table>
                 </div>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
