--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -777,8 +777,8 @@
                       <th>Mn worth</th>
                     </tr>
                     </thead>
-                    <tbody>
-                    <!--<tr>
+                    <!--<tbody>
+                    <tr>
                       <td><div class="coinaced"></div></td>
                       <td><a href="/dashboard/stats/aced.html">AceD (ACED)</a></td>
                       <td>$0.4398	</td>
@@ -922,8 +922,8 @@
                       <td>1,419	</td>
                       <td>15,000	</td>
                       <td>$7,717</td>
-                    </tr>-->
-                    <!--</tbody>
+                    </tr>
+                    </tbody>-->
                     <tfoot>
                     <tr>
                       <th></th>
@@ -940,7 +940,7 @@
                     </tfoot>
                   </table>
                 </div>
-              </div>-->
+              </div>
             </div>
           </div>
         </div>
@@ -1020,7 +1020,7 @@
 <!-- Switchery JavaScript --> 
 <script src="plugins/vendors/bower_components/switchery/dist/switchery.min.js"></script> 
 <!-- EChartJS JavaScript --> 
-<script src="plugins/vendors/bower_components/echarts/dist/echarts-en.min.js"></script> 
+<script src="plugins/vendors/bower_components/echarts/dist/echarts-en.min.js"></script>
 
 <!-- Select2 JavaScript --> 
 <script src="plugins/vendors/bower_components/select2/dist/js/select2.full.min.js"></script> 
@@ -1028,15 +1028,15 @@
 <!--<script src="plugins/vendors/bower_components/jquery-toast-plugin/dist/jquery.toast.min.js"></script> -->
 <!-- Webticker Javascript --> 
 <script src="plugins/vendors/bower_components/web-ticker/jquery.webticker.min.js"></script> 
-<!-- Amcharts charts JavaScript --> 
+<!-- Amcharts charts JavaScript -->
 <script src="plugins/vendors/bower_components/amcharts/amcharts.js"></script> 
 <script src="plugins/vendors/bower_components/amcharts/serial.js"></script> 
 <script src="plugins/vendors/bower_components/amcharts/amstock.js"></script> 
 
-<!-- Piety JavaScript --> 
+<!-- Piety JavaScript -->
 <script src="plugins/vendors/bower_components/peity/jquery.peity.min.js"></script> 
 <script src="plugins/assets/js/peity-data.js"></script> 
-<!-- Init JavaScript --> 
+<!-- Init JavaScript -->
 <script src="plugins/assets/js/init.js"></script>
 <!--<script src="plugins/assets/js/random-class.js"></script>
 <!-- Form Advance Init JavaScript -->
