--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -586,7 +586,7 @@
                 <div class="sm-data-box">
                   <div class="container-fluid">
                     <div class="row">
-                      <div class="col-xs-6 pl-20 pr-0 data-wrap-left"> <span class="txt-dark block counter"><i class="mdi mdi-currency-usd"></i><span class="counter-anim">0.411216</span><i class="mdi mdi-arrow-down text-danger"></i></span> <span class="weight-500 uppercase-font block">Acedcoin (ACED)</span> </div>
+                      <div class="col-xs-6 pl-20 pr-0 data-wrap-left"> <span class="txt-dark block counter"><i class="mdi mdi-currency-usd"></i><span class="counter-anim top-acedcoin">0.411216</span><i class="mdi mdi-arrow-down text-danger"></i></span> <span class="weight-500 uppercase-font block">Acedcoin (ACED)</span> </div>
                       <div class="col-xs-6 text-center  pl-0 pr-0 pt-30 data-wrap-right">
                         <div id="sparkline_1"  class="sparkline-w-100-h-50"></div>
                       </div>
@@ -604,7 +604,7 @@
                 <div class="sm-data-box">
                   <div class="container-fluid">
                     <div class="row">
-                      <div class="col-xs-6 pl-20 pr-0 data-wrap-left"> <span class="txt-dark block counter"><i class="mdi mdi-currency-usd"></i><span class="counter-anim">6,095.46</span><i class="mdi mdi-arrow-up text-success"></i></span> <span class="weight-500 uppercase-font block">Bitcoin (BTC)</span> </div>
+                      <div class="col-xs-6 pl-20 pr-0 data-wrap-left"> <span class="txt-dark block counter"><i class="mdi mdi-currency-usd"></i><span class="counter-anim top-bitcoin">6,095.46</span><i class="mdi mdi-arrow-up text-success"></i></span> <span class="weight-500 uppercase-font block">Bitcoin (BTC)</span> </div>
                       <div class="col-xs-6 text-center  pl-0 pr-0 pt-30 data-wrap-right">
                         <div id="sparkline_1_20" class="sparkline-w-100-h-50"></div>
                       </div>
@@ -622,7 +622,7 @@
                 <div class="sm-data-box">
                   <div class="container-fluid">
                     <div class="row">
-                      <div class="col-xs-6 pl-20 pr-0 data-wrap-left"> <span class="txt-dark block counter"><i class="mdi mdi-currency-usd"></i><span class="counter-anim">228.7990</span><i class="mdi mdi-arrow-up text-success"></i></span> <span class="weight-500 uppercase-font block">Dash (DASH)</span> </div>
+                      <div class="col-xs-6 pl-20 pr-0 data-wrap-left"> <span class="txt-dark block counter"><i class="mdi mdi-currency-usd"></i><span class="counter-anim top-dash">228.7990</span><i class="mdi mdi-arrow-up text-success"></i></span> <span class="weight-500 uppercase-font block">Dash (DASH)</span> </div>
                       <div class="col-xs-6 text-center  pl-0 pr-0  pt-30 data-wrap-right">
                         <div id="sparkline_4" class="sparkline-w-100-h-50"></div>
                       </div>
@@ -719,10 +719,10 @@
               <div class="panel-body row pt-10 pb-15 bitcoin-wdgt">
                 <div class="tickercontainer-main">
                   <ul id="webTicker">
-                    <li><i><img src="../favicon.png" style="width:14px;margin-bottom: -1px;"></i> ACED <span class="coin-value"> $0.411216</span></li>
-                    <li><i class="mdi mdi-bitcoin text-warning"></i> BTC <span class="coin-value"> $6,095.46</span></li>
-                    <li><i><img src="plugins/assets/img/dash.png" style="width:14px;margin-bottom: -3px;"></i> DASH <span class="coin-value"> $228.7990</span></li>
-                    <li><i class="mdi mdi-currency-eth text-primary"></i> ETH <span class="coin-value"> $427.58</span></li>
+                    <li><i><img src="../favicon.png" style="width:14px;margin-bottom: -1px;"></i> ACED $<span class="coin-value top-acedcoin"> $0.411216</span></li>
+                    <li><i class="mdi mdi-bitcoin text-warning"></i> BTC $<span class="coin-value top-bitcoin"> $6,095.46</span></li>
+                    <li><i><img src="plugins/assets/img/dash.png" style="width:14px;margin-bottom: -3px;"></i> DASH $<span class="coin-value top-dash"> $228.7990</span></li>
+                    <li><i class="mdi mdi-currency-eth text-primary"></i> ETH $<span class="coin-value top-eth"> $427.58</span></li>
                     <!--<li><i class="mdi mdi-currency-gbp text-default"></i> GBP <span class="coin-value"> $1.315461</span></li>-->
                     <!--<li><i class="mdi mdi-currency-eur text-danger"></i> EUR <span class="coin-value"> $1.1561556</span></li>-->
                   </ul>
@@ -1007,8 +1007,7 @@
 <script src="plugins/vendors/bower_components/owl.carousel/dist/owl.carousel.min.js"></script> 
 <script src="plugins/vendors/bower_components/owl.carousel/dist/owl.carousel.min.js"></script> 
 <!-- Progressbar Animation JavaScript --> 
-<script src="plugins/vendors/bower_components/waypoints/lib/jquery.waypoints.min.js"></script> 
-<script src="plugins/vendors/bower_components/jquery.counterup/jquery.counterup.min.js"></script> 
+<script src="plugins/vendors/bower_components/waypoints/lib/jquery.waypoints.min.js"></script>
 <!-- Fancy Dropdown JS --> 
 <script src="plugins/assets/js/dropdown-bootstrap-extended.js"></script> 
 <!-- FlotChart JavaScript --> 
