--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -722,8 +722,8 @@
                     <li><i><img src="../favicon.png" style="width:14px;margin-bottom: -1px;"></i> ACED $<span class="coin-value top-acedcoin"> $0.411216</span></li>
                     <li><i class="mdi mdi-bitcoin text-warning"></i> BTC $<span class="coin-value top-bitcoin"> $6,095.46</span></li>
                     <li><i><img src="plugins/assets/img/dash.png" style="width:14px;margin-bottom: -3px;"></i> DASH $<span class="coin-value top-dash"> $228.7990</span></li>
-                    <li><i class="mdi mdi-currency-eth text-primary"></i> ETH $<span class="coin-value top-eth"> $427.58</span></li>
-                    <!--<li><i class="mdi mdi-currency-gbp text-default"></i> GBP <span class="coin-value"> $1.315461</span></li>-->
+                    <!--<li><i class="mdi mdi-currency-eth text-primary"></i> ETH $<span class="coin-value top-eth"> $427.58</span></li>
+                   <!--<li><i class="mdi mdi-currency-gbp text-default"></i> GBP <span class="coin-value"> $1.315461</span></li>-->
                     <!--<li><i class="mdi mdi-currency-eur text-danger"></i> EUR <span class="coin-value"> $1.1561556</span></li>-->
                   </ul>
                 </div>
