--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -668,39 +668,39 @@
           <div class="form-group co_currency">
             <label for="currency1">Select base currency:</label>
             <select class="form-control" id="currency1">
-              <option id="usd">US dollar (USD)</option>
-              <option id="btc">Bitcoin (BTC)</option>
-              <option id="aud">Australian dollar (AUD)</option>
-              <option id="bgn">Bulgarian lev (BGN)</option>
-              <option id="brl">Brazilian real (BRL)</option>
-              <option id="cad">Canadian dollar (CAD)</option>
-              <option id="chf">Swiss franc (CHF)</option>
-              <option id="cny">Chinese yuan renminbi (CNY)</option>
-              <option id="czk">Czech koruna (CZK)</option>
-              <option id="dkk">Danish krone (DKK)</option>
-              <option id="eur">Euro (EUR)</option>
-              <option id="gbp">Pound sterling (GBP)</option>
-              <option id="hkd">Hong Kong dollar (HKD)</option>
-              <option id="hrk">Croatian kuna (HRK)</option>
-              <option id="huf">Hungarian forint (HUF)</option>
-              <option id="idr">Indonesian rupiah (IDR)</option>
-              <option id="ils">Israeli shekel (ILS)</option>
-              <option id="inr">Indian rupee (INR)</option>
-              <option id="jpy">Japanese yen (JPY)</option>
-              <option id="krw">South Korean won (KRW)</option>
-              <option id="mxn">Mexican peso (MXN)</option>
-              <option id="myr">Malaysian ringgit (MYR)</option>
-              <option id="nok">Norwegian krone (NOK)</option>
-              <option id="nzd">New Zealand dollar (NZD)</option>
-              <option id="php">Philippine piso (PHP)</option>
-              <option id="pln">Polish zloty (PLN)</option>
-              <option id="ron">Romanian leu (RON)</option>
-              <option id="rub">Russian rouble (RUB)</option>
-              <option id="sek">Swedish krona (SEK)</option>
-              <option id="sgd">Singapore dollar (SGD)</option>
-              <option id="thb">Thai baht (THB)</option>
-              <option id="try">Turkish lira (TRY)</option>
-              <option id="zar">South African rand (ZAR)</option>
+              <option id="usd" value="usd">US dollar (USD)</option>
+              <!--<option id="btc" value="btc">Bitcoin (BTC)</option>-->
+              <option id="aud" value="aud">Australian dollar (AUD)</option>
+              <option id="bgn" value="bgn">Bulgarian lev (BGN)</option>
+              <option id="brl" value="brl">Brazilian real (BRL)</option>
+              <option id="cad" value="cad">Canadian dollar (CAD)</option>
+              <option id="chf" value="chf">Swiss franc (CHF)</option>
+              <option id="cny" value="cny">Chinese yuan renminbi (CNY)</option>
+              <option id="czk" value="czk">Czech koruna (CZK)</option>
+              <option id="dkk" value="dkk">Danish krone (DKK)</option>
+              <option id="eur" value="eur">Euro (EUR)</option>
+              <option id="gbp" value="gbp">Pound sterling (GBP)</option>
+              <option id="hkd" value="hkd">Hong Kong dollar (HKD)</option>
+              <option id="hrk" value="hrk">Croatian kuna (HRK)</option>
+              <option id="huf" value="huf">Hungarian forint (HUF)</option>
+              <option id="idr" value="idr">Indonesian rupiah (IDR)</option>
+              <option id="ils" value="ils">Israeli shekel (ILS)</option>
+              <option id="inr" value="inr">Indian rupee (INR)</option>
+              <option id="jpy" value="jpy">Japanese yen (JPY)</option>
+              <option id="krw" value="krw">South Korean won (KRW)</option>
+              <option id="mxn" value="mxn">Mexican peso (MXN)</option>
+              <option id="myr" value="myr">Malaysian ringgit (MYR)</option>
+              <option id="nok" value="nok">Norwegian krone (NOK)</option>
+              <option id="nzd" value="nzd">New Zealand dollar (NZD)</option>
+              <option id="php" value="php">Philippine piso (PHP)</option>
+              <option id="pln" value="pln">Polish zloty (PLN)</option>
+              <option id="ron" value="ron">Romanian leu (RON)</option>
+              <option id="rub" value="rub">Russian rouble (RUB)</option>
+              <option id="sek" value="sek">Swedish krona (SEK)</option>
+              <option id="sgd" value="sgd">Singapore dollar (SGD)</option>
+              <option id="thb" value="thb">Thai baht (THB)</option>
+              <option id="try" value="try">Turkish lira (TRY)</option>
+              <option id="zar" value="zar">South African rand (ZAR)</option>
             </select>
           </div>
         </div>
@@ -1014,7 +1014,7 @@
 <script src="plugins/vendors/bower_components/flot/jquery.flot.js"></script> 
 <script src="plugins/assets/js/flot-data-dashboard.js"></script> 
 <script src="plugins/vendors/bower_components/skycons/skycons.js"></script> 
-<!-- Sparkline JavaScript --> 
+<!-- Sparkline JavaScript -->
 <script src="plugins/vendors/jquery.sparkline/dist/jquery.sparkline.min.js"></script> 
 <!-- Switchery JavaScript --> 
 <script src="plugins/vendors/bower_components/switchery/dist/switchery.min.js"></script> 
