--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -160,7 +160,11 @@
       <li><a class="active-page" href="https://www.acedcoin.com/dashboard/" >
         <div class="pull-left"><i class="mdi mdi-apps mr-20"></i><span class="right-nav-text">Dashboard</span></div>
         <div class="clearfix"></div>
-        </a></li>
+      </a></li>
+      <li><a class="active-page" href="monitoring.html" >
+        <div class="pull-left"><i class="mdi mdi-apps mr-20"></i><span class="right-nav-text">Monitoring</span></div>
+        <div class="clearfix"></div>
+      </a></li>
 
       <li><hr class="light-grey-hr mb-10"/></li>
 
