--- a/dashboard/monitoring.html
+++ b/dashboard/monitoring.html
@@ -157,7 +157,7 @@
     <!-- Left Sidebar Menu -->
     <div class="fixed-sidebar-left">
         <ul class="nav navbar-nav side-nav nicescroll-bar">
-            <li><a class="active-page" href="https://www.acedcoin.com/dashboard/" >
+            <li><a href="https://www.acedcoin.com/dashboard/" >
                 <div class="pull-left"><i class="mdi mdi-apps mr-20"></i><span class="right-nav-text">Dashboard</span></div>
                 <div class="clearfix"></div>
             </a></li>
