--- a/dashboard/monitoring.html
+++ b/dashboard/monitoring.html
@@ -658,8 +658,9 @@
 <!-- Piety JavaScript -->
 <script src="plugins/vendors/bower_components/peity/jquery.peity.min.js"></script>
 <script src="plugins/assets/js/peity-data.js"></script>
-<!-- Init JavaScript
+<!-- Init JavaScript -->
 <script src="plugins/assets/js/init.js"></script>
+<script src="plugins/assets/js/live_price.js"></script>
 <!--<script src="plugins/assets/js/random-class.js"></script>
 <!-- Form Advance Init JavaScript -->
 <!--
